--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:Rottenapple1@localhost:3306/issue"
+# DATABASE_URL="mysql://root:Rottenapple1@localhost:3306/issue"
 
 PORT=80
 DATABASE_URL=`postgresql://postgres:Rottenapple1$@rds-db.c3eisce06lo0.us-east-1.rds.amazonaws.com/rds_db 
