--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@
 # DATABASE_URL="mysql://root:Rottenapple1@localhost:3306/issue"
 
 PORT=80
-DATABASE_URL=`postgresql://postgres:Rottenapple1$@rds-db.c3eisce06lo0.us-east-1.rds.amazonaws.com/rds_db`
+DATABASE_URL="postgresql://postgres:Rottenapple1$@rds-db.c3eisce06lo0.us-east-1.rds.amazonaws.com/rds_db"
